Added: More projects & Improved

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Learning Js from Tech With Tim and Modified the Code by my Own</title>
+    <title>Custom Js Projects</title>
 </head>
 <body>
-    
-    <!-- =========== Custom JS =========== -->
+
+    <!-- Custom JS -->
     <script src="select-adventure.js"></script>
 </body>
 </html>
